--- a/frontend/src/assets/index.postcss
+++ b/frontend/src/assets/index.postcss
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* In order for centering an element, the parent needs to have the property: display: relative; */
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
